package it.polimi.ingsw.board;

import java.util.Queue;

public class Cards {

	private Queue<iCard>;

	public iCard pullCard() {

		return null; // TODO
	}
}
