package it.polimi.ingsw.board;

public class Planche {

	private PlancheCell[] cells;


	public int getPlayerPosition(PlayerColor c) {
		return 0; // TODO

	}

	public PlayerColor getPlayersAt(int position) {

		return null; // TODO
	}


	public void movePlayer(PlayerColor c, int rel_change) {
		return;
	}

	public PlayerColor won() {
		return null; //TODO
	}


}
