package it.polimi.ingsw.board;


public class PlancheCell {

	private PlayerColor[] players;

	public PlayerColor getPlayers() {
		return null; // TODO
	}

}
