package it.polimi.ingsw.board;

public interface iCards {

	public iCard pullCard();
}
