package it.polimi.ingsw.model.components;

public class iSpaceShip {
    //STUB
}
